# Noty

./: Cargo.toml  noty.db  ui_update.txt
src/: ai_features.rs  chat.rs  github.rs  github_sync.rs  integrations_api.rs  logbook.rs  main.rs  personas.rs  settings.rs
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
