[package]
name = "noty"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. Web Server & Runtime (Jantung aplikasi)
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# 2. Database (SQLite - Otak penyimpanan lokal)
# Kita pakai 'runtime-tokio-rustls' biar gak ribet install OpenSSL di Windows/Linux user
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time", "chrono"] }

# 3. HTTP Client (Mulut aplikasi - buat ngobrol sama GitHub/AI)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# 4. Data Processing (Utility)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
