[package]
name = "noty"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server & Runtime
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time", "chrono"] }

# HTTP Client (Untuk GitHub & Gemini)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }